--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "mongoose": "^6.3.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.4-lts.1",
+    "mysql": "^2.18.1",
     "recordrtc": "^5.6.2"
   }
 }
