--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "art-template": "^4.13.2",
     "bcrypt": "^5.0.1",
     "browserify": "^17.0.0",
+    "encoding": "^0.1.13",
     "express": "^4.17.3",
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.2",
@@ -13,6 +14,7 @@
     "mongoose": "^6.3.0",
     "multer": "^1.4.4-lts.1",
     "mysql": "^2.18.1",
+    "pm2": "^5.2.0",
     "recordrtc": "^5.6.2"
   }
 }
