Upload to Version 1.1.
Add lots of functions.

--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.0",
     "multer": "^1.4.4-lts.1",
     "mysql": "^2.18.1",
+    "peer": "^0.6.1",
     "pm2": "^5.2.0",
-    "recordrtc": "^5.6.2"
+    "recordrtc": "^5.6.2",
+    "socketio": "^1.0.0"
   }
 }
